resources_codefresh/codefresh-delivery-pipelines.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefresh-delivery-pipelines
spec:
  rules:
    - http:
        paths:
          - path: /webhooks/flask
            backend:
              service:
                name: flask-eventsource-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
